server/crates/djinn-agent/src/snapshots/typed_evidence_context/djinn_agent__typed_evidence_context__tests__typed_evidence_context_advocate_snapshot.snap
---
source: crates/djinn-agent/src/typed_evidence_context.rs
expression: "render_for_role(AgentType::Advocate, &full_context())"
---
# Typed evidence

Finding `01a01188-0000-7000-8000-00000000feed` is `evidence_received`, demanded against revision 3.
Claim under demand: Can the launcher share a cgroup across pods?
Validated evidence outcome: partial

## Planned checks

- `cgroup-delegation-probe` (command) — passed; anchor `command:01a01188-0000-7000-8000-0000000000aa` (server-derived health: healthy)
- `launcher-clone-into-cgroup` (code) — failed (server-derived health: unavailable)

## Attempts

- attempt 1 on spike `01a01188-0000-7000-8000-0000000000b1`; payload rejected: missing_identity
- attempt 2 on spike `01a01188-0000-7000-8000-0000000000b2` — partial

## Failures and gaps

- launcher-clone-into-cgroup: could not reach a host with delegation enabled

## Retry and conflict

Attempts used: 2 of 2
Last failure: payload rejected: missing_identity
Conflict: active_evidence_conflict
